Refs #91562; Fix blurry logo in PDF export

--- a/eea/climateadapt/theme/climateadaptv2/src/less/custom-print-pdf.less
+++ b/eea/climateadapt/theme/climateadaptv2/src/less/custom-print-pdf.less
@@ -31,13 +31,8 @@
       text-align: center;
       margin: 20pt 42pt 0;
     }
-    .logo-img-print {
-      display: block !important;
+    img {
       height: 35pt;
-    }
-
-    .logo-img {
-      display: none;
     }
   }
 
