--- a/eea/climateadapt/theme/climateadaptv2/src/less/main.less
+++ b/eea/climateadapt/theme/climateadaptv2/src/less/main.less
@@ -458,8 +458,8 @@
   .mobile-menu {
     top: 10px;
   }
-  .logo img {
-    max-width: 70%;
+  .logo a img {
+    height: 33px;
   }
   .header .sub-menu {
     min-width: 100%;
