--- a/eea/climateadapt/theme/climateadaptv2/src/less/topmenu.less
+++ b/eea/climateadapt/theme/climateadaptv2/src/less/topmenu.less
@@ -7,11 +7,11 @@
 }
 
 .logo {
-  margin-top: 4px;
+  margin-top: 8px;
   a {
     display: block;
-    .logo-img-print {
-      display: none;
+    img {
+      height: 50px
     }
   }
 }
